--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather Query Platform</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header>
+    <div class="container">
+    <nav id="top">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+
+     </nav>
+    </div>
+</header>
+   <h2 id="page_title">WEATHER QUERY PLATFORM</h2>
+ 
     
+
+    <script text="text/javascript" src="index.js"></script>
 </body>
 </html>
