page styling update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <header>
     <div class="container">
     <nav id="top">
-        <ul>
+        <h3>WEATHER&trade;</h3>
+
+        <ul class="link_list">
             <li><a href="#">Home</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Blog</a></li>
@@ -21,7 +23,7 @@
      </nav>
     </div>
 </header>
-   <h2 id="page_title">WEATHER QUERY PLATFORM</h2>
+   <h2 id="page_title">WEATHER QUERY PLATFORM&trade;</h2>
  
     
 
