--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <h1>Login</h1>
         <input type="text" name="" placeholder="Username" id="username">
         <input type="password" name="" placeholder="Password" id="password">
-        <input type="submit" name="" value="Login">
+        <input onclick="displ()" id="login-click" type="submit" name="" value="Login">
     </form>
 <header>
-    <div class="container">
+    <div class="container" >
     <nav id="top">
         
         <h3>WEATHER&trade;</h3>
