--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <form class="login_box" action="login.html" method="post">
+    <form class="login_box" action="#" method="post">
         <h1>Login</h1>
         <input type="text" name="" placeholder="Username" id="username">
         <input type="password" name="" placeholder="Password" id="password">
-        <input onclick="displ()" id="login-click" type="submit" name="" value="Login">
+        <input id="login-click" type="submit" name="" value="Login">
     </form>
 <header>
     <div class="container" >
