--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container" >
     <nav id="top">
         
-        <h3>WEATHER&trade;</h3>
+        <h3><a href="#">WEATHER&trade;</a></h3>
         <ul class="link_list">
             <li><a href="#">Home</a></li>
             <li><a href="#">About us</a></li>
