--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <div id="div1">
     <form class="login_box" action="#" method="post">
         <h1>Login</h1>
         <input type="text" name="" placeholder="Username" id="username">
         <input type="password" name="" placeholder="Password" id="password">
         <input id="login-click" type="submit" name="" value="Login">
     </form>
+    </div>
 <header>
     <div class="container" >
     <nav id="top">
@@ -30,6 +32,11 @@
     </div>
 </header>
    <h2 id="page_title">WEATHER QUERY PLATFORM</h2>
+   <section class="quotes">
+    <h3>QUOTES</h3>
+   <p>Sometimes I wish that I was the weather, you'd bring me up in conversation forever. And when it rained, I'd be the talk of the day ~ John Mayer
+    </p>
+    </section>
  
     
 
