--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
     </div>
 </header>
    <h2 id="page_title">WEATHER QUERY PLATFORM</h2>
+
    <section class="quotes">
     <h3>QUOTES</h3>
    <p>Sometimes I wish that I was the weather, you'd bring me up in conversation forever. And when it rained, I'd be the talk of the day ~ John Mayer
     </p>
+    <a href="#">More Quotes</a>
     </section>
  
     
