styling update & adding weather card

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="div1">
-    <form class="login_box" action="#" method="post">
+    <form class="login_box" action="#" method="post" hidden>
         <h1>Login</h1>
         <input type="text" name="" placeholder="Username" id="username">
         <input type="password" name="" placeholder="Password" id="password">
@@ -39,6 +39,19 @@
     </p>
     <a href="#">More Quotes</a>
     </section>
+    <div class="card">
+        <div class="search">
+            <input type="text" class="search_bar">
+            <button>search</button>
+        </div>
+        <div class="weather_here">
+            <h2 class="city">Weather in Nairobi</h2>
+            <div class="temp">28°C</div>
+            <div class="description">Scattered Clouds</div>
+            <div class="humidity">Humidity: 65%</div>
+            <div class="wind">Wind Speed: 5km/h</div>
+        </div>
+    </div>
  
     
 
