--- a/index.html
+++ b/index.html
@@ -32,26 +32,27 @@
     </div>
 </header>
    <h2 id="page_title">WEATHER QUERY PLATFORM</h2>
-
+   
+   <div class="card">
+    <div class="search">
+        <input type="text" class="search_bar">
+        <button>search</button>
+    </div>
+    <div class="weather_here">
+        <h2 class="city">Nairobi</h2>
+        <h1 class="temp">28°C</h1>
+        <div class="description">Scattered Clouds</div>
+        <div class="humidity">Humidity: 65%</div>
+        <div class="wind">Wind Speed: 5km/h</div>
+    </div>
+</div>
    <section class="quotes">
     <h3>QUOTES</h3>
    <p>Sometimes I wish that I was the weather, you'd bring me up in conversation forever. And when it rained, I'd be the talk of the day ~ John Mayer
     </p>
     <a href="#">More Quotes</a>
     </section>
-    <div class="card">
-        <div class="search">
-            <input type="text" class="search_bar">
-            <button>search</button>
-        </div>
-        <div class="weather_here">
-            <h2 class="city">Weather in Nairobi</h2>
-            <div class="temp">28°C</div>
-            <div class="description">Scattered Clouds</div>
-            <div class="humidity">Humidity: 65%</div>
-            <div class="wind">Wind Speed: 5km/h</div>
-        </div>
-    </div>
+   
  
     
 
