--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    
    <div class="card">
     <div class="search">
-        <input type="text" class="search_bar">
+        <input type="text" class="search_bar" placeholder="Search">
         <button>search</button>
     </div>
     <div class="weather_here">
