--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
         <h2 class="city">Nairobi</h2>
         <h1 class="temp">28°C</h1>
         <div class="description">Scattered Clouds</div>
+        <div class="pressure">Air Pressure:</div>
         <div class="humidity">Humidity: 65%</div>
         <div class="wind">Wind Speed: 5km/h</div>
+        <div class="timezone">Timezone: EAT</div>
     </div>
 </div>
    <section class="quotes">
