--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    <div class="card">
     <div class="search">
         <input type="text" class="search_bar" placeholder="Search">
-        <button>search</button>
+        <button class="search_button">search</button>
     </div>
     <div class="weather_here">
         <h2 class="city">Nairobi</h2>
@@ -54,9 +54,6 @@
     <a href="#">More Quotes</a>
     </section>
    
- 
-    
-
     <script text="text/javascript" src="index.js"></script>
 </body>
 </html>
