structure & page styling update

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    
    <div class="card">
     <div class="search">
-        <input type="text" class="search_bar" placeholder="Search">
+        <input type="text" id="city_here" class="search_bar" placeholder="Search">
         <button class="search_button">search</button>
     </div>
     <div class="weather_here">
@@ -46,13 +46,16 @@
         <div class="humidity">Humidity: 65%</div>
         <div class="wind">Wind Speed: 5km/h</div>
     </div>
+    <div>
+        <section class="quotes">
+            <h3>QUOTES</h3>
+           <p>Sometimes I wish that I was the weather, you'd bring me up in conversation forever. And when it rained, I'd be the talk of the day ~ John Mayer
+            </p>
+            <a href="#">More Quotes</a>
+            </section>
+    </div>
 </div>
-   <section class="quotes">
-    <h3>QUOTES</h3>
-   <p>Sometimes I wish that I was the weather, you'd bring me up in conversation forever. And when it rained, I'd be the talk of the day ~ John Mayer
-    </p>
-    <a href="#">More Quotes</a>
-    </section>
+  
    
     <script text="text/javascript" src="index.js"></script>
 </body>
