--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
    
    <div class="card">
     <div class="search">
-        <input type="text" id="city_here" class="search_bar" placeholder="Search">
+        <input type="text" id="city_here" class="search_bar" placeholder="Search City">
         <button class="search_button">search</button>
     </div>
     <div class="weather_here">
-        <h2 class="city">Nairobi</h2>
-        <h1 class="temp">28°C</h1>
-        <div class="description">Scattered Clouds</div>
+        <h1 class="city"></h1>
+        <h2 class="temp">°C</h2><em><strong>
+        <div class="description"></div>
         <div class="pressure">Air Pressure:</div>
-        <div class="humidity">Humidity: 65%</div>
-        <div class="wind">Wind Speed: 5km/h</div>
+        <div class="humidity">Humidity: </div>
+        <div class="wind">Wind Speed: </div></em></strong>
     </div>
     <div>
         <section class="quotes">
@@ -52,11 +52,19 @@
            <p>Sometimes I wish that I was the weather, you'd bring me up in conversation forever. And when it rained, I'd be the talk of the day ~ John Mayer
             </p>
             <a href="#">More Quotes</a>
-            </section>
+        </section>
     </div>
 </div>
-  
-   
+<div>
+    <form action="#">
+        <p>Kindly leave us feedback by filling the form below.</p>
+        Name:  <input type="text" placeholder="your name"><br><br>
+        Email:  <input type="email" name="" id="" placeholder="your email"><br><br>
+        <label for="feedback_box">Feedback here:</label><br>
+        <textarea name="submit" id="" cols="40" rows="10" placeholder="feedback"></textarea><br>
+        <input type="submit" value="submit"><br><br><br>
+    </form>
+</div>
     <script text="text/javascript" src="index.js"></script>
 </body>
-</html>
+</html> 
