--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div>
         <section class="quotes">
-            <h3>QUOTES</h3>
+            <h3>QUOTE</h3>
            <p>Sometimes I wish that I was the weather, you'd bring me up in conversation forever. And when it rained, I'd be the talk of the day ~ John Mayer
             </p>
             <a href="#">More Quotes</a>
